<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>jp.gr.java_conf.hhiroshell</groupId>
    <artifactId>beehive4j</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <java.version>8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <github.repo.directory>${project.build.directory}/mvn-repo</github.repo.directory>
        <github.global.server>github</github.global.server>
    </properties>

    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Local Github Pages</name>
            <url>file://${github.repo.directory}</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>4.3.21.RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.9</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.9.9</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <systemPropertyVariables>
                        <beehive4j.test.host>${env.BEEHIVE4J_TEST_HOST}</beehive4j.test.host>
                        <beehive4j.test.user>${env.BEEHIVE4J_TEST_USER}</beehive4j.test.user>
                        <beehive4j.test.password>${env.BEEHIVE4J_TEST_PASSWORD}</beehive4j.test.password>
                        <BEEHIVE4J_LOG_LEVEL>${env.BEEHIVE4J_TEST_LOG_LEVEL}</BEEHIVE4J_LOG_LEVEL>
                    </systemPropertyVariables>
                    <!-- Parallel testing does not work inside wercker jdk8 box. -->
                    <forkCount>0</forkCount>
                    <argLine>-XX:MaxPermSize=256M -Xmx256M</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <skip>${env.CI}</skip>
                    <message>Maven artifacts for beehive4j:${project.version}</message>
                    <noJekyll>true</noJekyll>
                    <outputDirectory>${github.repo.directory}</outputDirectory>
                    <branch>refs/heads/mvn-repo</branch>
                    <includes>
                        <include>**/*</include>
                    </includes>
                    <repositoryName>beehive4j</repositoryName>
                    <repositoryOwner>hhiroshell</repositoryOwner>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>site</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>